--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,20 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #000;
   color: #fff;
+}
+
+a {
+  color: yellow;
+
+  &:hover,
+  &:focus,
+  &:active {
+    color: white;
+    text-decoration: none;
+  }
 }
