--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,8 +1,11 @@
-.App {}
-
-.Background {
+.App {
   width: 100vw;
   height: 100vh;
+}
+
+.Background {
+  width: 100%;
+  height: 100%;
   object-position: center;
 }
 
@@ -17,6 +20,14 @@
 
   > * {
     width: 50%;
+  }
+}
+
+.Controls_Hidden {
+  width: 125px;
+
+  > * {
+    width: 100%;
   }
 }
 
