--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -27,10 +27,21 @@ a {
   width: 250px;
   margin: 25px;
   padding: 25px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   background-color: rgba(0, 0, 0, .2);
 
   > * {
-    width: 50%;
+    width: calc(50% - 4px);
+    height: 40px;
+    font-size: 14px;
+    margin-bottom: 8px;
+    border-radius: 4px;
+
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -39,6 +50,10 @@ a {
 
   > * {
     width: 100%;
+
+    + * {
+      margin-top: 8px;
+    }
   }
 }
 
