--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'IBM Plex Mono', monospace;
+  font: 14px/1.5 'IBM Plex Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #000;
