Update error handling

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -60,6 +60,9 @@ a {
 .Controls__Error {
   margin-bottom: 0;
   width: 100%;
+  color: orange;
+  text-align: center;
+  font-weight: bold;
 }
 
 .Info {
