--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -38,6 +38,7 @@ a {
     margin-bottom: 8px;
     width: calc(50% - 4px);
     height: 40px;
+    border: 1px solid white;
     border-radius: 4px;
     background-color: white;
 
@@ -82,6 +83,11 @@ a {
       }
     }
   }
+}
+
+.Controls_Toggle {
+  background-color: black !important;
+  color: white;
 }
 
 .Controls__ReOrder {
