--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -27,6 +27,7 @@ a {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  gap: 8px;
   background-color: rgba(0, 0, 0, .2);
 
   > * {
@@ -35,26 +36,15 @@ a {
 
   > select,
   > button {
-    margin-bottom: 8px;
     width: calc(50% - 4px);
     height: 40px;
     border: 1px solid white;
     border-radius: 4px;
     background-color: white;
 
-    @media screen and (min-width: 769px) {
-      &:nth-last-child(-n + 3) {
-        margin-bottom: 0;
-      }
-    }
-
     @media screen and (max-width: 768px) {
       width: calc(100% / 3 - 4px);
       height: 32px;
-
-      &:nth-child(even) {
-        margin-bottom: 0;
-      }
     }
   }
 
@@ -77,10 +67,6 @@ a {
 
     > button {
       width: 100%;
-
-      + * {
-        margin-top: 8px;
-      }
     }
   }
 }
