--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,13 @@
 
 * {
   box-sizing: border-box;
+
+  &:focus {
+    outline-width: 2px;
+    outline-offset: 4px;
+    outline-style: dotted;
+    outline-color: yellow;
+  }
 }
 
 body {
