--- a/src/components/Info.module.scss
+++ b/src/components/Info.module.scss
@@ -2,27 +2,31 @@
   position: fixed;
   right: 0;
   padding: 25px;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, .25);
   text-align: right;
 
-  @media screen and (min-width: 769px) {
-    bottom: 0;
-    margin: 25px;
-    width: 60ch;
-  }
-
-  @media screen and (max-width: 768px) {
+  @media (max-width: 768px) {
     top: 0;
     left: 0;
     padding: 15px;
+  }
+
+  @media (min-width: 769px) {
+    bottom: 0;
+    width: 50ch;
   }
 }
 
 .Info__Heading {
   margin-top: 0;
+  font-size: 1.25em;
+
+  @media (min-width: 769px) {
+    font-size: 1.5em;
+  }
 }
 
 .Info__SubHeading {
   display: block;
-  font-size: .8em;
+  font-size: .75em;
 }
