--- a/src/index.scss
+++ b/src/index.scss
@@ -1,28 +1,28 @@
 @import-normalize;
 
 * {
-  box-sizing: border-box;
-
   &:focus {
     outline-width: 2px;
-    outline-offset: 4px;
+    outline-offset: 3px;
     outline-style: dotted;
-    outline-color: yellow;
+    outline-color: #aeb0b5;
   }
+}
+
+html {
+  font-size: 62.5%;
 }
 
 body {
   margin: 0;
   padding: 0;
-  font: 14px/1.5 'IBM Plex Mono', monospace;
+  font-family: 'IBM Plex Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-size: 1.6rem;
+  line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #000;
   color: #fff;
-
-  @media screen and (max-width: 768px) {
-    font-size: 12px;
-  }
 }
 
 a {
