--- a/src/components/Controls.module.scss
+++ b/src/components/Controls.module.scss
@@ -17,7 +17,7 @@
     background-color: #fff;
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 767px) {
     display: none;
   }
 }
@@ -26,19 +26,10 @@
   position: fixed;
   top: 0;
   left: 0;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
   padding-right: 2rem;
 
   &:not(.Controls_Hidden) {
     background-color: #323a45;
-  }
-
-  * {
-    font-family: inherit;
-    font-size: 1em;
-    line-height: 1;
   }
 
   select,
@@ -65,15 +56,27 @@
     }
   }
 
-  @media (min-width: 769px) {
-    top: 0;
-  }
-
-  @media (max-width: 768px) {
+  @media (max-width: 767px) {
     top: auto;
     right: 0;
     bottom: 0;
     padding: 2rem;
+  }
+
+  @media (min-width: 768px) {
+    top: 0;
+  }
+}
+
+.Controls__Controls {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+
+  * {
+    font-family: inherit;
+    font-size: 1em;
+    line-height: 1;
   }
 }
 
@@ -90,4 +93,12 @@
   color: yellow;
   text-align: center;
   font-weight: bold;
+}
+
+.Controls__Info {
+  padding: 0 0 2rem 2rem;
+
+  @media (max-width: 1023px) {
+    display: none;
+  }
 }
